added fustat as global font

--- a/client/src/components/Home.module.css
+++ b/client/src/components/Home.module.css
@@ -13,6 +13,7 @@
     top: 3px;
     left: 285px;
     font-size: 9.63px;
+    font-family: 'Fustat';
     display: inline-block;
     width: 29.8px;
     height: 14px;
