--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,13 @@
   pointer-events: none;
 }
 
+@font-face {
+  font-family: 'Fustat';
+  src: url('./assets/fustat.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
