--- a/client/src/components/LogIn.css
+++ b/client/src/components/LogIn.css
@@ -10,43 +10,47 @@
 
   .form {
     background-color: #eef0eb;
-    padding: 20px;
+    padding: 40px;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    width: 300px;
-    height: 300px;
+    width: 35%;
+    height: 50%;
   }
 
   .title {
     color: #af7746;
+    font-family: 'Fustat';
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 
   .input-container {
-    margin-bottom: 15px;
+    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
   }
 
   .label {
     color: #af7746;
-    margin-bottom: 5px;
-    font-size: 14px;
+    font-family: 'Fustat';
+    margin-bottom: 8px;
+    font-size: 24px;
     font-weight: bold;
   }
 
   .input {
-    padding: 10px;
-    border-radius: 15px;
+    padding: 13px;
+    border-radius: 17px;
+    font-family: 'Fustat';
     border: 1px solid #ccc;
     font-size: 16px;
   }
 
   .button {
     background-color: #af7746;
+    font-family: 'Fustat';
     color: #fff;
     padding: 10px;
     border: none;
@@ -58,6 +62,7 @@
 
   .link {
     color: #af7746;
+    font-family: 'Fustat';
     text-decoration: none;
     font-weight: bold;
   }
