--- a/client/src/components/Header.module.css
+++ b/client/src/components/Header.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 2px;
     left: 28px;
-    font-family: 'Like-A-Rope';
+    font-family: 'Like A Rope';
     padding: 5px;
     font-size: 40px;
     text-align: left;
