--- a/client/src/components/TrailBlazerLoggedIn/HeaderLoggedIn.module.css
+++ b/client/src/components/TrailBlazerLoggedIn/HeaderLoggedIn.module.css
@@ -13,6 +13,7 @@
 .generateTrip, .discover, .account {
     font-size: 20px;
     color: white;
+    white-space: nowrap;
     text-decoration: none;
     font-family: 'Fustat';
     padding: 5px 20px;
@@ -49,7 +50,7 @@
     justify-content: space-between;
     align-items: center;
     width: 40%;
-    padding: 10px;
+    padding: 0px;
     margin-left: auto;
 }
 
