made trailblazer link to home

--- a/client/src/components/Header.module.css
+++ b/client/src/components/Header.module.css
@@ -2,6 +2,8 @@
     position: absolute;
     top: 2px;
     left: 28px;
+    color: white;
+    text-decoration: none;
     font-family: 'Like A Rope';
     padding: 5px;
     font-size: 40px;
