--- a/client/src/components/TrailBlazerLoggedIn/HeaderLoggedIn.module.css
+++ b/client/src/components/TrailBlazerLoggedIn/HeaderLoggedIn.module.css
@@ -5,6 +5,8 @@
     font-family: 'Like A Rope';
     padding: 5px;
     font-size: 40px;
+    color: white;
+    text-decoration: none;
     text-align: left;
     display: inline;
     width: 110.6px;
