--- a/client/src/components/Home.module.css
+++ b/client/src/components/Home.module.css
@@ -38,11 +38,10 @@
 }
 
 .img {
-    position: absolute;
+    position: fixed;
     max-width: 300px;
     width: 25%;
-    color:#AF7746;
-    top: 320px;
+    bottom: 0;
     left: -50px;
     height:auto;
 }
