--- a/client/src/components/SignUp.css
+++ b/client/src/components/SignUp.css
@@ -67,3 +67,13 @@
     text-decoration: none;
     font-weight: bold;
 }
+
+.img {
+    position: fixed;  /* Positioning it absolutely */
+    max-width: 300px;
+    width: 25%;
+    color: #AF7746;
+    bottom:0;
+    left: -50px;  /* Moves it slightly left */
+    height: auto;
+  }
