--- a/client/src/components/Home.module.css
+++ b/client/src/components/Home.module.css
@@ -82,3 +82,23 @@
       transform: translateY(-10px);
     }
   }
+
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #AF7746;
+    border-radius: 10px;
+    border: 3px solid #f1f1f1;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
