animation of welcome page

--- a/client/src/components/Home.module.css
+++ b/client/src/components/Home.module.css
@@ -48,6 +48,7 @@
 }
 
 .img {
+    animation: fadeIn 3s ease-in-out, bounce 1s ease-in-out 2;
     position: fixed;
     max-width: 300px;
     width: 25%;
