--- a/client/src/components/Generate.css
+++ b/client/src/components/Generate.css
@@ -23,7 +23,7 @@
     align-items: center;
     width: 85%;
     height: 85%;
-    padding: 22px;
+    padding: 2%;
     margin-bottom: 20px;
     border-radius: 15px;
     border: 1px solid #ccc;
