--- a/client/src/components/Account/Account.module.css
+++ b/client/src/components/Account/Account.module.css
@@ -77,7 +77,7 @@
     cursor: pointer;
     position: absolute;
     right: 0;
-    margin-right: 200px;
+    margin-right: 11%;
     margin-top: 20px;
 
   }
