--- a/client/src/components/Account/Account.module.css
+++ b/client/src/components/Account/Account.module.css
@@ -71,14 +71,16 @@
     color: white;
     font-size: 20px;
     font-family: 'Fustat';
-    padding: 15px;
+    padding: 10px;
     border: none;
-    border-radius: 25px;
+    border-radius: 45px;
     cursor: pointer;
     position: absolute;
     right: 0;
     margin-right: 11%;
     margin-top: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
 
   }
 
