--- a/client/src/components/Discover.module.css
+++ b/client/src/components/Discover.module.css
@@ -127,6 +127,7 @@
     background-color: white;
     padding: 20px;
     font-family: Fustat;
+    color: #0E4A6C;
     border-radius: 30px;
     max-width: 500px;
     width: 100%;
